<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="multiply">*</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="linear_layout_calculator">linear layout calculator</string>
    <string name="constrain_layout_calculator">constrain layout calculator</string>
    <string name="frame_layout_calculator">frame layout calculator</string>
</resources>