<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearLayout_Activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:textSize="30sp"

        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="40sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="40sp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="40sp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="40sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="40sp" />

            <Button
                android:id="@+id/six"
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="40sp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/one"
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="40sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="40sp" />

            <Button
                android:id="@+id/three"
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="40sp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="40sp" />
        </LinearLayout>


<!--    </LinearLayout>-->



    
    
</LinearLayout>