<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstrLayout_Activity">

    <TextView
        android:id="@+id/textView"

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:background="@color/teal_200"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--guideline????-->


    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_7"
        android:textSize="40sp"

        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/eight"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_8"
        android:textSize="40sp"

        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/seven"
        app:layout_constraintRight_toLeftOf="@id/nine"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/_9"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/eight"
        app:layout_constraintRight_toLeftOf="@id/plus"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"

        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/nine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_4"

        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/one"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"

        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/four"
        app:layout_constraintRight_toLeftOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/three"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/five"
        app:layout_constraintRight_toLeftOf="@id/minus"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"

        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/multiply"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/six"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/two"
        app:layout_constraintTop_toBottomOf="@id/four"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_2"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/one"
        app:layout_constraintRight_toLeftOf="@id/three"
        app:layout_constraintTop_toBottomOf="@id/five"
        app:layout_constraintVertical_chainStyle="spread"

        />

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/two"
        app:layout_constraintRight_toLeftOf="@id/multiply"
        app:layout_constraintTop_toBottomOf="@id/six"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minus"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>